# rust-web-demo

./: Cargo.toml  README.md  package-lock.json  package.json  start.sh  tmp_check_fetch.js
apps/api/: .env.example  Cargo.toml  process.env
apps/api/migrations/: 20250823120000_init.sql  20250823120001_sqlite_init.sql
apps/api/src/: main.rs
apps/api/src/domain/: mod.rs  models.rs  rbac.rs
apps/api/src/infra/: db.rs  error.rs
apps/api/src/routes/: admin.rs  auth.rs  cart.rs  catalog.rs  health.rs  mod.rs
apps/web/: package-lock.json  package.json
apps/web/.next/: app-build-manifest.json  trace
apps/web/.next/server/: _error.js  app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
apps/web/.next/server/app/: page.js  page_client-reference-manifest.js
apps/web/.next/server/pages/: _error.js
apps/web/.next/server/vendor-chunks/: @swc.js  next.js
apps/web/.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
apps/web/.next/static/webpack/: 0afbfa0853588c7b.webpack.hot-update.json  165c4c2591ef3a44.webpack.hot-update.json  194c5220edb727f7.webpack.hot-update.json  1af051e8f2527dd1.webpack.hot-update.json  2964363159618050.webpack.hot-update.json  4f292232e507c912.webpack.hot-update.json  739c321aa7a6a414.webpack.hot-update.json  (+48 more)
apps/web/.next/types/app/: layout.ts  (+1 more)
apps/web/src/: RootProvider.tsx
apps/web/src/app/: CartContext.tsx  HeaderWithCart.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts
infra/: Makefile  docker-compose.yml
public/images/: placeholder.txt
(+58 files in other folders)
